@@ -36,7 +36,7 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.forgerock.commons</groupId>
+            <groupId>org.wrensecurity.commons</groupId>
             <artifactId>forgerock-util</artifactId>
         </dependency>
         <dependency>
@@ -98,6 +98,7 @@
                                 <includes>
                                     <include>com.googlecode.json-simple:*</include>
                                     <include>org.forgerock.commons:*</include>
+                                    <include>org.wrensecurity.commons:*</include>
                                     <include>org.codehaus.plexus:plexus-utils</include>
                                     <include>args4j:args4j</include>
                                 </includes>
@@ -160,4 +161,24 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>add-opens</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                --add-opens java.base/java.net=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+        </profile>
+    </profiles>
 </project>
